--- a/SCSS/Theme Rewrite/plugins-third-party/_plugin-dataview.scss
+++ b/SCSS/Theme Rewrite/plugins-third-party/_plugin-dataview.scss
@@ -52,6 +52,7 @@ body {
 }
 
 //dvjs
+.dataview.result-group { padding-left: 0; }
 .dataview.result-group > .contains-task-list {
     padding-inline-start: 0;
 
